# imageProcessAPI

./: .gitignore  Makefile  README.md  docker-compose.yml  init.sql
go-app/: go-app.dockerfile  go.mod  go.sum  handlers.go  handlers_test.go  helpers.go  main.go
python-app/: main.py  pyproject.toml  python-service.dockerfile  requirements.txt  upscaler.py
python-app/models/: readme.md
